# eztk

./: README.md  pyproject.toml  setup.py
src/eztk/: eztk.py
test/: test_eztk.py
